preliminary game logic implemented. dealing of cards, initial pairs. modal.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="/src/index.tsx" type="module" defer></script>
-    <title>Solid App</title>
+    <title>Pairs</title>
   </head>
   <body>
     <div id="root"></div>
