--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <link
       rel="shortcut icon"
       href="./src/assets/icons/favicon.png"
-      type="image/x-icon"
-    />
+      type="image/x-icon" />
     <script src="/src/index.tsx" type="module" defer></script>
     <title>Pairs</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
+  <div class="counter">
+    <a href="http://www.freevisitorcounters.com">at Freevisitorcounters.com</a>
+    <script
+      type="text/javascript"
+      src="https://www.freevisitorcounters.com/auth.php?id=e1817115d7b9d9fb2a57882e47640c8523bcc2d4"></script>
+    <script
+      type="text/javascript"
+      src="https://www.freevisitorcounters.com/en/home/counter/991899/t/1"></script>
+  </div>
 </html>
