--- a/index.html
+++ b/index.html
@@ -12,18 +12,12 @@
   </head>
   <body>
     <div id="root"></div>
-    <div class="counter">
-      <div class="counter">
-        <a href="http://www.freevisitorcounters.com"
-          >at Freevisitorcounters.com</a
-        >
-        <script
-          type="text/javascript"
-          src="https://www.freevisitorcounters.com/auth.php?id=e1817115d7b9d9fb2a57882e47640c8523bcc2d4"></script>
-        <script
-          type="text/javascript"
-          src="https://www.freevisitorcounters.com/en/home/counter/991899/t/1"></script>
-      </div>
-    </div>
+    <a href="http://www.freevisitorcounters.com">at Freevisitorcounters.com</a>
+    <script
+      type="text/javascript"
+      src="https://www.freevisitorcounters.com/auth.php?id=e1817115d7b9d9fb2a57882e47640c8523bcc2d4"></script>
+    <script
+      type="text/javascript"
+      src="https://www.freevisitorcounters.com/en/home/counter/991899/t/1"></script>
   </body>
 </html>
