--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="shortcut icon"
-      href="./src/assets/icons/favicon.png"
-      type="image/x-icon" />
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon" />
     <script src="/src/index.tsx" type="module" defer></script>
-
     <title>Pairs</title>
   </head>
   <body>
