pendo snippet update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       pendo.initialize({
         visitor: {
-          id: "VISITOR-UNIQUE-ID", // Required if user is logged in, default creates anonymous ID
+          id: "VISITOR", // Required if user is logged in, default creates anonymous ID
           // email:        // Recommended if using Pendo Feedback, or NPS Email
           // full_name:    // Recommended if using Pendo Feedback
           // role:         // Optional
@@ -41,18 +41,18 @@
           // as long as it's not one of the above reserved names.
         },
 
-        account: {
-          id: "ACCOUNT-UNIQUE-ID", // Required if using Pendo Feedback, default uses the value 'ACCOUNT-UNIQUE-ID'
-          // name:         // Optional
-          // is_paying:    // Recommended if using Pendo Feedback
-          // monthly_value:// Recommended if using Pendo Feedback
-          // planLevel:    // Optional
-          // planPrice:    // Optional
-          // creationDate: // Optional
+        // account: {
+        //   id: "ACCOUNT-UNIQUE-ID", // Required if using Pendo Feedback, default uses the value 'ACCOUNT-UNIQUE-ID'
+        //   // name:         // Optional
+        //   // is_paying:    // Recommended if using Pendo Feedback
+        //   // monthly_value:// Recommended if using Pendo Feedback
+        //   // planLevel:    // Optional
+        //   // planPrice:    // Optional
+        //   // creationDate: // Optional
 
-          // You can add any additional account level key-values here,
-          // as long as it's not one of the above reserved names.
-        },
+        //   // You can add any additional account level key-values here,
+        //   // as long as it's not one of the above reserved names.
+        // },
       })
     </script>
 
