--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       pendo.initialize({
         visitor: {
-          id: "VISITOR", // Required if user is logged in, default creates anonymous ID
+          id: "VISITOR-UNIQUE-ID", // Required if user is logged in, default creates anonymous ID
           // email:        // Recommended if using Pendo Feedback, or NPS Email
           // full_name:    // Recommended if using Pendo Feedback
           // role:         // Optional
